@@ -4,7 +4,7 @@
  * (c) Copyright 2002 Rasmus Hansen (GK@panet)
  * Distributed under the GNU Public License
  *
- * $Id: ADMINCMDSCommand.cc,v 1.21 2004-08-25 20:32:29 jeekay Exp $
+ * $Id: ADMINCMDSCommand.cc,v 1.22 2004-11-20 19:58:54 jeekay Exp $
  */
 
 #include	<string>
@@ -77,6 +77,7 @@ if(aLevel >= 800)
 	bot->Notice(theClient, "OFFICIAL (CHECK <user>) (CLEAR <user>) (LIST) (SET <user> <level>");
 	bot->Notice(theClient, "SUSPEND * (nick) (duration) (reason)");
 	bot->Notice(theClient, "UNSUSPEND * (nick) (reason)");
+	bot->Notice(theClient, "SET (chan) PARTNER (on/off)");
 	bot->Notice(theClient, "\002");
 
 	}
