@@ -1,5 +1,6 @@
 2004-09-28 1.2.18 Jeekay
 * Change INFO so only the user/csc/opers can see if a user is globally suspended
+* Added PARTNER channel flag
 * Bumped version to 1.2.18
 
 2004-08-19 1.2.17 Jeekay
